--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - pytorch=1.10
   - torchvision=0.11
   - torchtext=0.11
+  - fairscale=0.4
   - pip
   - pip:
     - pytorch-lightning[extra]~=1.5.0
