--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pytorch==1.10.*
+torch==1.10.*
 torchvision==0.11.*
 torchtext==0.11.*
-fairscale==0.4
+fairscale==0.4.*
 pytorch-lightning[extra]==1.5.*
 lightning-bolts==0.4.*
 torchmetrics==0.6.*
