--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include LICENSE
 recursive-include docs *.md
 recursive-include docs *.png
 recursive-exclude notebooks *.ipynb
-recursive-include perceiverio *.yaml
+recursive-include perceiver *.yaml
 
 prune .github
 prune .cache
