--- a/.github/workflows/ci_install-pkg.yml
+++ b/.github/workflows/ci_install-pkg.yml
@@ -68,7 +68,7 @@ jobs:
           # install as archive
           pip install dist/*.tar.gz
           cd ..
-          python -c "import perceiverio ; print(perceiverio.__version__)"
+          python -c "import perceiver ; print(perceiver.__version__)"
           pip uninstall -y perceiver-io
 
       - name: Install | Uninstall package - wheel
@@ -76,5 +76,5 @@ jobs:
           # install as wheel
           pip install dist/*.whl
           cd ..
-          python -c "import perceiverio ; print(perceiverio.__version__)"
+          python -c "import perceiver ; print(perceiver.__version__)"
           pip uninstall -y perceiver-io
