--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,24 +41,19 @@ repos:
       - id: yesqa
         name: Unused noqa
 
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+  - repo: https://github.com/omnilib/ufmt
+    rev: v1.3.0
     hooks:
-      - id: isort
-        name: Format imports
-
-  - repo: https://github.com/psf/black
-    rev: 21.12b0
-    hooks:
-      - id: black
-        name: Format code
+      - id: ufmt
+        additional_dependencies:
+          - black == 21.9b0
+          - usort == 0.6.4
 
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.0
     hooks:
       - id: blacken-docs
-        args: [--line-length=120]
-        additional_dependencies: [black==21.7b0]
+        additional_dependencies: [black==21.9b0]
 
   - repo: https://github.com/executablebooks/mdformat
     rev: 0.7.11
