--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 include *.txt
 exclude *.yml
+exclude *.yaml
 include LICENSE
+recursive-include *.py
 recursive-include docs *.md
 recursive-include docs *.png
 recursive-exclude notebooks *.ipynb
