--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ torchvision==0.11.*
 torchtext==0.11.*
 fairscale==0.4.*
 pytorch-lightning==1.5.*
+jsonargparse[signatures]==4.0.*
 lightning-bolts==0.4.*
 torchmetrics==0.6.*
 tokenizers
