--- a/.github/workflows/ci_install-pkg.yml
+++ b/.github/workflows/ci_install-pkg.yml
@@ -16,22 +16,16 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Check package
-        run: |
-          pip install check-manifest
-          check-manifest
-          python setup.py check --metadata --strict
-
       - name: Create package
         run: |
-          pip install --upgrade setuptools wheel
-          python setup.py sdist
+          pip install flit invoke
+          invoke build
 
       - name: Verify package
         run: |
           pip install twine==3.2
           twine check dist/*
-          python setup.py clean
+          invoke clean-build
 
   pkg-install:
     runs-on: ${{ matrix.os }}
@@ -49,13 +43,11 @@ jobs:
 
       - name: Prepare env
         run: |
-          pip install check-manifest "twine==3.2" setuptools wheel
+          pip install "twine==3.2" flit invoke
 
       - name: Create package
         run: |
-          check-manifest
-          # python setup.py check --metadata --strict
-          python setup.py sdist bdist_wheel
+          invoke build
 
       - name: Install | Uninstall package - archive
         run: |
