--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,7 @@ repos:
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
+        args: [--markdown-linebreak-ext=md]
       - id: check-yaml
       - id: check-json
       - id: check-toml
@@ -41,30 +42,14 @@ repos:
         name: Unused noqa
 
   - repo: https://github.com/omnilib/ufmt
-    rev: v1.3.0
+    rev: v1.3.1
     hooks:
       - id: ufmt
         additional_dependencies:
-          - black == 21.9b0
-          - usort == 0.6.4
+          - black == 21.12b0
+          - usort == 1.0.0
 
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.0
+  - repo: https://github.com/pycqa/flake8
+    rev: 4.0.1
     hooks:
-      - id: blacken-docs
-        additional_dependencies: [black==21.9b0]
-
-  - repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.11
-    hooks:
-      - id: mdformat
-        additional_dependencies:
-          - mdformat-gfm
-          - mdformat-black
-          - mdformat_frontmatter
-
-#  - repo: https://github.com/PyCQA/flake8
-#    rev: 4.0.1
-#    hooks:
-#      - id: flake8
-#        name: Check PEP8
+      - id: flake8
