--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,73 @@
 [build-system]
-requires = [
-    "setuptools",
-    "wheel",
+requires = ["flit_core >=3.2,<4"]
+build-backend = "flit_core.buildapi"
+
+[project]
+name = "perceiver-io"
+readme = "README.md"
+authors = [
+    {name = "Martin Krasser", email = "krasserm@googlemail.com"},
+    {name = "Christoph Stumpf", email = "stumpf.christoph@gmail.com"},
+]
+requires-python = ">=3.9"
+license = {file = "LICENSE"}
+keywords= ["perceiver-io", "deep-learning"]
+classifiers = [
+    "Environment :: Console",
+    "Natural Language :: English",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Topic :: Scientific/Engineering",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+]
+dynamic = ["version", "description"]
+dependencies = [
+    "torch==1.10.*",
+    "torchvision==0.11.*",
+    "torchtext==0.11.*",
+    "fairscale==0.4.*",
+    "pytorch-lightning==1.5.*",
+    "jsonargparse[signatures]==4.1.*",
+    "lightning-bolts==0.4.*",
+    "torchmetrics==0.6.*",
+    "tokenizers",
+    "einops",
+]
+
+[project.optional-dependencies]
+dev = [
+    "flit>=3.2,<4",
+    "invoke",
+    "pre-commit",
+    "pytest>4.0",
+    "pytest-cov",
+]
+
+[project.urls]
+homepage = "https://github.com/krasserm/perceiver-io"
+
+[tool.flit.module]
+name = "perceiver"
+
+[tool.flit.sdist]
+exclude = [
+    ".github",
+    ".cache",
+    ".flake8",
+    ".gitignore",
+    ".pre-commit-config.yaml",
+    "notebooks",
+    "tests",
+    "environment.yml",
+    "tasks.py",
 ]
 
 [tool.black]
-# https://github.com/psf/black
 line-length = 120
 exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"
-skip-string-normalization = true
 
 [tool.isort]
 known_first_party = [
@@ -17,3 +76,8 @@ known_first_party = [
 skip_glob = []
 profile = "black"
 line_length = 120
+
+[tool.pytest.ini_options]
+
+[tool.coverage.run]
+source = ["perceiver"]
