--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -37,24 +37,30 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ runner.os }}-pip-py${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
+        key: ${{ runner.os }}-pip-py${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
         restore-keys: |
           ${{ runner.os }}-pip-py${{ matrix.python-version }}-
 
+    - name: Install Poetry
+      uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: 1.1.13
+
     - name: Install dependencies
       run: |
-        pip install '.[dev]'
-        python --version
-        pip --version
-        pip list
+        poetry install
+        poetry run pip install setuptools==59.5.0
+        poetry run python --version
+        poetry run pip --version
+        poetry run pip list
       shell: bash
 
     - name: Tests and coverage
       run: |
-        invoke test --cov
+        poetry run invoke test --cov
 
     - name: Statistics
       if: success()
       run: |
-        coverage report
-        coverage xml
+        poetry run coverage report
+        poetry run coverage xml
