--- a/perceiver/trainer.yaml
+++ b/perceiver/trainer.yaml
@@ -17,7 +17,7 @@ trainer:
   gradient_clip_algorithm: null
   process_position: 0
   num_nodes: 1
-  num_processes: 1
+  num_processes: null
   devices: null
   gpus: null
   auto_select_gpus: false
@@ -36,11 +36,11 @@ trainer:
   max_steps: -1
   min_steps: null
   max_time: null
-  limit_train_batches: 1.0
-  limit_val_batches: 1.0
-  limit_test_batches: 1.0
-  limit_predict_batches: 1.0
-  val_check_interval: 1.0
+  limit_train_batches: null
+  limit_val_batches: null
+  limit_test_batches: null
+  limit_predict_batches: null
+  val_check_interval: null
   flush_logs_every_n_steps: null
   log_every_n_steps: 50
   accelerator: null
@@ -53,10 +53,9 @@ trainer:
   num_sanity_val_steps: 2
   resume_from_checkpoint: null
   profiler: null
-  benchmark: false
+  benchmark: null
   deterministic: false
   reload_dataloaders_every_n_epochs: 0
-  reload_dataloaders_every_epoch: false
   auto_lr_find: false
   replace_sampler_ddp: true
   detect_anomaly: false
