--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ packages = [
 include = ["docs", "scripts"]
 
 [tool.poetry.dependencies]
-python = "3.9.*"
+python = "^3.7"
 torch = "1.11.*"
 torchvision = "0.12.*"
 torchtext = "0.12.*"
