--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "perceiver-io"
-version = "0.2.1"
+version = "0.3.0"
 description = "Perceiver IO"
 readme = "README.md"
 authors = [
@@ -28,19 +28,19 @@ homepage = "https://github.com/krasserm/perceiver-io"
 packages = [
     { include = "perceiver" },
 ]
-include = ["docs", "scripts"]
+include = ["docs"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+pytorch-lightning = "1.6.*"
 torch = "1.11.*"
-torchvision = "0.12.*"
-torchtext = "0.12.*"
 fairscale = "0.4.*"
 torchmetrics = "0.8.*"
 einops = "0.4.*"
-tokenizers = "0.12.*"
-pytorch-lightning = "1.6.*"
-lightning-bolts = "0.5.*"
+tokenizers = {version = "0.12.*", optional = true}
+torchvision = {version = "0.12.*", optional = true}
+torchtext = {version = "0.12.*", optional = true}
+lightning-bolts = {version = "0.5.*", optional = true}
 jsonargparse = {extras = ["signatures"], version = "4.7.*"}
 
 [tool.poetry.dev-dependencies]
@@ -48,6 +48,10 @@ invoke = "^1.6.0"
 pre-commit = "^2.17.0"
 pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
+
+[tool.poetry.extras]
+image = ["torchvision", "lightning-bolts"]
+text = ["torchtext", "tokenizers"]
 
 [tool.black]
 line-length = 120
