--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,10 @@ torch = "1.11.*"
 fairscale = "0.4.*"
 torchmetrics = "0.8.*"
 einops = "0.4.*"
+datasets = {version = "2.2.*", optional = true}
 tokenizers = {version = "0.12.*", optional = true}
+transformers = {version = "4.19.*", optional = true}
 torchvision = {version = "0.12.*", optional = true}
-torchtext = {version = "0.12.*", optional = true}
 lightning-bolts = {version = "0.5.*", optional = true}
 jsonargparse = {extras = ["signatures"], version = "4.7.*"}
 
@@ -50,8 +51,8 @@ pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
 
 [tool.poetry.extras]
+text = ["datasets", "tokenizers", "transformers"]
 image = ["torchvision", "lightning-bolts"]
-text = ["torchtext", "tokenizers"]
 
 [tool.black]
 line-length = 120
