--- a/.github/workflows/code-format.yml
+++ b/.github/workflows/code-format.yml
@@ -10,10 +10,11 @@ jobs:
   pre-commit-check:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         # for private repo - first is the checkout step, which needs to use unlimited fetch depth for pushing
         with:
           fetch-depth: 0
+          lfs: true
       - uses: actions/setup-python@v2
 
       - name: set PY
