--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
 dependencies:
   - python=3.7
-  - cudatoolkit=10.2
-  - pip>=21.3
-  - pip:
-    - poetry==1.1.13
+  - cudatoolkit=11.3
+  - pytorch=1.11.0
+  - torchvision=0.12.0
+  - pip>=22
