--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ tokenizers = {version = "0.12.*", optional = true}
 transformers = {version = "4.19.*", optional = true}
 torchvision = {version = "0.12.0", optional = true}
 jsonargparse = {extras = ["signatures"], version = "4.7.*"}
+fsspec = {extras = ["s3"], version = "2022.5.0"}
 
 [tool.poetry.dev-dependencies]
 invoke = "^1.6.0"
