--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ packages = [
 include = ["docs"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7,<3.10"
 pytorch-lightning = "1.6.*"
 torch = "1.11.0"
 fairscale = "0.4.*"
