--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 notebooks/** linguist-vendored
 tokenizers/** filter=lfs diff=lfs merge=lfs -text
+tests/tokenizer/* filter=lfs diff=lfs merge=lfs -text
