--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -50,7 +50,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        poetry install
+        poetry install -E text -E image
         poetry run pip install setuptools==59.5.0
         poetry run python --version
         poetry run pip --version
