--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "perceiver-io"
-version = "0.5.0"
+version = "0.5.1"
 description = "Perceiver IO"
 readme = "README.md"
 authors = [
@@ -32,17 +32,17 @@ include = ["docs"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-pytorch-lightning = "1.6.*"
-torch = "1.11.0"
+pytorch-lightning = "1.7.*"
+torch = "1.12.*"
 fairscale = "0.4.*"
-torchmetrics = "0.8.*"
+torchmetrics = "0.9.*"
 torch-optimizer = "0.3.*"
 einops = "0.4.*"
-datasets = {version = "2.3.*", optional = true}
+datasets = {version = "2.4.*", optional = true}
 tokenizers = {version = "0.12.*", optional = true}
-transformers = {version = "4.19.*", optional = true}
-torchvision = {version = "0.12.0", optional = true}
-jsonargparse = {extras = ["signatures"], version = "4.7.*"}
+transformers = {version = "4.21.*", optional = true}
+torchvision = {version = "0.13.*", optional = true}
+jsonargparse = {extras = ["signatures"], version = "4.12.*"}
 fsspec = {extras = ["s3"], version = "2022.5.0"}
 
 [tool.poetry.dev-dependencies]
