Data preprocessing and documentation enhancements, major refactorings
Functional enhancements:

- Support for static word masking in addition to dynamic word masking.
- Support for individual token masking in addition to whole word masking.
- Task-specific data preprocessing for all supported text datasets.
- Constant learning rate scheduler with warmup now used by default.

Documentation enhancements:

- All training examples now provided as command line and Python script.
- Better overview of official models and example training checkpoints.
- Example training checkpoints can now be downloaded individually.
- Minor enhancements to all other documentation sections.

Refactorings and breaking changes:

- Rename `image` package to `vision`.
- `TextDataModule` base class now implements complete preprocessing logic.
- `TextDataModule` subclasses only convert source dataset to a common structure.
- Abstraction over cross-attention query creation (`QueryProvider`).
- Decouple `OutputAdapter` interface from trainable cross-attention query.
- Implement learned positions encodings as `nn.Embedding`.
- Move adapters to separate `perceiver.model.core.adapter` module.
- Rename `PerceiverConfig` to `PerceiverIOConfig`
- Rename `LitModel` base class to `LitPerceiverIO`.
- `LitClassifier.forward` now behaves like the wrapped model's `forward`.
- Object-oriented design of conversion from Hugging Face Perceiver models.
- Major refactoring of `PerceiverAR` and `CausalLanguageModel`.
- Move `FourierPositionEncoding` to perceiver.model.core.position` module.

--- a/.github/workflows/ci_testing.yml
+++ b/.github/workflows/ci_testing.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, windows-2019, macOS-11]
+        os: [ubuntu-20.04, windows-2019]
         python-version: [3.9]
 
     # Timeout: https://stackoverflow.com/a/59076067/4521646
@@ -50,7 +50,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        poetry install -E text -E image
+        poetry install -E text -E vision
         poetry run pip install setuptools==59.5.0
         poetry run python --version
         poetry run pip --version
