--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "perceiver-io"
-version = "0.7b1"
+version = "0.7.0"
 description = "Perceiver IO"
 readme = "README.md"
 authors = [
