--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "perceiver-io"
-version = "0.7.0"
+version = "0.8.dev1"
 description = "Perceiver IO"
 readme = "README.md"
 authors = [
@@ -31,7 +31,7 @@ packages = [
 include = ["docs"]
 
 [tool.poetry.dependencies]
-python = "^3.7,<3.11"
+python = "^3.8,<3.11"
 pytorch-lightning = "^1.7"
 torch = "^1.12"
 fairscale = "^0.4"
@@ -46,12 +46,22 @@ jsonargparse = {extras = ["signatures"], version = "^4.12"}
 fsspec = {extras = ["s3"], version = "*"}
 opencv-python = {version = "^4.6.0.66", optional = true}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 invoke = "^1.6.0"
 pre-commit = "^2.17.0"
 pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
 flaky = "^3.7.0"
+
+[tool.poetry.group.examples]
+optional = true
+
+[tool.poetry.group.examples.dependencies]
+scipy = "^1.10"
+pandas = "^1.1"
+notebook = "*"
+matplotlib = "*"
+ipywidgets = "*"
 
 [tool.poetry.extras]
 text = ["datasets", "tokenizers", "transformers"]
