--- a/environment.yml
+++ b/environment.yml
@@ -1,10 +1,10 @@
 name: perceiver-io
 channels:
   - pytorch
-  - conda-forge
+  - nvidia
 dependencies:
   - python=3.9
-  - cudatoolkit=11.3
-  - pytorch=1.12
-  - torchvision=0.13
+  - pytorch-cuda=11.7
+  - pytorch=1.13
+  - torchvision=0.14
   - pip>=22
