Symbolic audio generation using Perceiver AR
* Implement backend model `SymbolicAudioModel` based on
  Perceiver AR for symbolic audio modelling
* Provide HuggingFace interface `PerceiverSymbolicAudioModel` and
  HuggingFace pipeline `symbolic-audio-generation to use a
  symbolic audio model for inference
* Implement PyTorch Lightning wrapper to train a symbolic audio
  model
* Provide HuggingFace dataset implementations for `MaestroV3` and
  `GiantMIDI-Piano` datasets
* Implement residual dropout in Perceiver core modules
* Add GitHub action to build and publish docker container
* Add audio inference section in README.md

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -49,3 +49,10 @@ repos:
     rev: 4.0.1
     hooks:
       - id: flake8
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.2.1
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+        args: [ "--check" ]
