--- a/.github/workflows/code-format.yml
+++ b/.github/workflows/code-format.yml
@@ -15,8 +15,9 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - uses: actions/setup-python@v2
-
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
       - name: set PY
         run: echo "PY=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
       - uses: actions/cache@v2
@@ -24,7 +25,7 @@ jobs:
           path: ~/.cache/pre-commit
           key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
 
-      - uses: pre-commit/action@v2.0.3
+      - uses: pre-commit/action@v3.0.0
         # this action also provides an additional behaviour when used in private repositories
         # when configured with a github token, the action will push back fixes to the pull request branch
         with:
