--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,10 +45,11 @@ repos:
         - black == 21.12b0
         - usort == 1.0.0
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.262
     hooks:
-      - id: flake8
+      - id: ruff
+        args: ["--fix"]
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.2.1
